Fixed an issue in the SubstanceToProductResolver and added the RawQuery and QueryParser